# weathery

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Procfile  README.md  pyproject.toml  run.py
.github/workflows/: pytest.yml  python-app.yml
tests/: conftest.py  test_weathery.py
weathery/: __init__.py  config.py
weathery/authentication/: models.py  routes.py
weathery/home/: routes.py  weather.py
weathery/static/assets/: package.json
weathery/templates/home/: dashboard.html
weathery/templates/home/archive/: components-buttons.html  components-forms.html  components-modals.html  components-notifications.html  components-typography.html
weathery/templates/includes/: footer.html  navigation.html  scripts.html  sidebar.html
weathery/templates/layouts/: base-fullscreen.html  base.html
